--- a/finalProject/finalproject.html
+++ b/finalProject/finalproject.html
@@ -13,7 +13,7 @@
 
 <body>
   <h1>Welcome, to the game Random Answers for you!</h1>
-  <h2>Type any question you have in mind and we'll have an answer for you!</h2>
+  <h2>Click the button and we'll have an answer for you!</h2>
   <main id="question box" > </main>
   <img id="ball" src="images/88ball.jpg" alt="8ball picture">
   
